namespace Courses.Domain.Enums;

public enum CourseItemType
{
    Lesson,
    Test,
    Assignment,
    LiveSession,
    Resource,
    ExternalLink
}
